# pyscf_auto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pyproject.toml  pytest.ini  run_config.json  run_config_ts.json  run_opt.py  run_opt_chemistry.py  run_opt_config.py  run_opt_metadata.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  test_tmp.md
.github/workflows/: ci.yml  docs.yml
config/: pyscf_auto.yaml
core/: ase_backend.py  cli.py  interactive.py  run_opt.py  run_opt_config.py  run_opt_engine.py  workflow.py
docs/: index.md  orca-support-plan.md  refactoring_assessment_2026-02-06.md
docs/assets/: extra.css
docs/en/: cli.md  config.md  getting-started.md  index.md  queue.md  scan.md  troubleshooting.md  workflows.md
docs/en/design/: engine-abstraction.md
docs/ko/: cli.md  config.md  getting-started.md  index.md  queue.md  scan.md  troubleshooting.md  workflows.md
docs/ko/design/: engine-abstraction.md
input/: 1.xyz  1k.xyz  DIPEA.xyz  IntOTs.xyz  ts_example.inp  water_opt.inp  water_sp.inp
packaging/basis-set-exchange/: meta.yaml
packaging/dftflow/: meta.yaml
packaging/pyscf-smd/: meta.yaml
packaging/pyscf_auto/: build.sh  meta.yaml
packaging/sella/: meta.yaml
pdft/: __init__.py  cli.py  interactive.py  run_opt.py  run_opt_chemistry.py  run_opt_config.py  run_opt_metadata.py  run_opt_utils.py  workflow.py
pdft/assets/: run_config_ase.json  run_config_ts.json
scripts/: preflight_check.sh  restore_pyscf_basis.py  validate_inp.py  validate_runtime_config.py
src/: app_config.py  ase_backend.py  cli.py  cli_new.py  env_compat.py  gui_app.py  interactive.py  qcschema_export.py  run_opt.py  run_opt_config.py  run_opt_dispersion.py  run_opt_engine.py  run_opt_metadata.py  run_opt_paths.py  run_opt_resources.py  run_opt_utils.py  run_queue.py  solvent_dielectric.json
src/commands/: __init__.py  _helpers.py  cleanup.py  organize.py  run_inp.py
src/dftflow_core/: __init__.py  ase_backend.py  cli.py  interactive.py  qcschema_export.py  queue.py  run_opt.py  run_opt_config.py  run_opt_engine.py  run_opt_logging.py  run_opt_metadata.py  run_opt_resources.py
src/dftflow_core/workflow/: __init__.py  context.py  events.py  stage_freq.py  stage_irc.py  stage_opt.py  types.py  utils.py
src/engines/: __init__.py  base.py  registry.py
src/execution/: __init__.py  context.py  engine_adapter.py  entrypoint.py  metadata_recorder.py  plugins.py  stage_freq.py  stage_irc.py  stage_opt.py  stage_sp.py  types.py  utils.py
src/inp/: __init__.py  geometry.py  parser.py  route_line.py
src/notifier/: __init__.py  events.py  notifier.py  telegram_client.py
src/organizer/: __init__.py  index_store.py  molecule_key.py  result_cleaner.py  result_organizer.py
src/pdft_core/: __init__.py  ase_backend.py  cli.py  interactive.py  qcschema_export.py  queue.py  run_opt.py  run_opt_config.py  run_opt_dispersion.py  run_opt_engine.py  run_opt_logging.py  run_opt_resources.py  workflow.py
src/pdft_core/workflow/: __init__.py  context.py  events.py  stage_freq.py  stage_irc.py  stage_opt.py  stage_scan.py  stage_sp.py  types.py  utils.py
src/runner/: __init__.py  attempt_engine.py  doctor.py  orchestrator.py  retry_strategies.py  run_lock.py  state_machine.py  types.py
src/workflow/: __init__.py  context.py  events.py  stage_freq.py  stage_irc.py  stage_opt.py  stage_scan.py  stage_sp.py  types.py  utils.py
tests/: test_app_config.py  test_architecture_guardrails.py  test_attempt_engine_diagnostics.py  test_cleanup_cli.py  test_cli_e2e.py  test_cli_parity.py  test_execution_entrypoint.py  test_execution_plugins.py  test_inp_parser.py  test_queue.py  test_run_lock.py  test_run_opt_config.py  test_run_opt_dispersion.py  test_runner_resume_state_machine.py  test_stage_freq_regression.py  test_workflow_utils.py
