[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dftflow"
version = "0.1.0"
description = "Lightweight PySCF/ASE workflow for geometry optimization and analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4.18", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
dftflow = "run_opt:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "ase_backend",
    "cli",
    "interactive",
    "qcschema_export",
    "queue",
    "run_opt",
    "run_opt_config",
    "run_opt_dispersion",
    "run_opt_engine",
    "run_opt_logging",
    "run_opt_metadata",
    "run_opt_resources",
    "run_opt_utils",
]

[tool.setuptools.package-data]
"" = ["solvent_dielectric.json"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["workflow"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["pyscf"]
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = false
