[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscf_auto"
version = "0.1.0"
description = "Lightweight PySCF/ASE workflow for geometry optimization and analysis. Conda-only distribution; pip install is unsupported."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["mypy", "pytest", "pytest-cov", "ruff", "types-PyYAML"]

[project.scripts]
pyscf_auto = "run_opt:main"
dftflow = "run_opt:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "ase_backend",
    "cli",
    "env_compat",
    "qcschema_export",
    "run_queue",
    "run_opt",
    "run_opt_config",
    "run_opt_dispersion",
    "run_opt_engine",
    "run_opt_logging",
    "run_opt_metadata",
    "run_opt_paths",
    "run_opt_resources",
    "run_opt_utils",
]

[tool.setuptools.package-data]
"*" = ["solvent_dielectric.json"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["workflow"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["pyscf"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
